--- a/f24/index.html
+++ b/f24/index.html
@@ -929,23 +929,21 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Fri, Oct. 11</td>
+      <tr>
+        <td>Fri, Oct. 18</td>
         <td class="topic">
-          Lecture 20: Training Large Language Models
+          Lecture 17: BERT and GPTs (2)
             <div class="subtopic">
-            Self-Supervised Learning </br>
-          Data Scaling </br>
             </div>
         </td>
         <td>
-          <li><a href="https://www.dropbox.com/scl/fi/2z7g0r9pod5a6cgfacy9v/Lecture-20.pdf?rlkey=fk5tmpul1hwc9q94aounx2lxx&dl=0" target="_blank">[Slides]</a></li>
+          <li><a href="https://www.dropbox.com/scl/fi/tgpzr2he68ckkwpmzsdz0/L17_Transformer-and-BERT.pdf?rlkey=lad0rkmnmwky23gax603gpllz&st=7spntg7d&dl=0" target="_blank">[Slides]</a></li>
         </td>
 
         <td>
             
         </td>
-      </tr> -->
+      </tr>
 
 
  
@@ -970,12 +968,10 @@
       </tr> -->
 
 
-      <tr>
+<!--       <tr>
         <td>Fri, Oct. 18</td>
        <td class="topic">
             Lecture 21: Computer Vision: Detection and Segmentation
-
-            <!-- <a href="https://www.dropbox.com/s/s47aglwdjtyknkr/lec14-dl-mlp.pdf?dl=0">Lec. 14: Multilayer Perceptron</a> -->
           <div class="subtopic">
             Semantic segmentation </br>
           Object detection </br>
@@ -988,7 +984,7 @@
         <td>
             
         </td>
-      </tr>
+      </tr> -->
 
 
       <tr>
