assignment 4 site update

--- a/f24/index.html
+++ b/f24/index.html
@@ -876,6 +876,8 @@
 
         </td>
         <td>
+          Assignment 4 Part 1 Out
+          <a href="https://www.dropbox.com/scl/fi/9t6iqyu9ygl5dfgkia2pt/lab4_neural_machine_translation.ipynb?rlkey=umy89kkfgexkxkcfmtgql15lp&st=k3m8e8b2&dl=0">[Lab 4: Neural Machine Translation]</a>
         </td>
       </tr>
 
@@ -942,7 +944,7 @@
         </td>
 
         <td>
-            
+            Assignment 4 Part 1 Due
         </td>
       </tr>
 
@@ -966,7 +968,9 @@
                   <li><a href="https://github.com/Mooler0410/LLMsPracticalGuide?tab=readme-ov-file" target="_blank">[The Practical Guides for Large Language Models]</a></li>
          
         </td>
-        <td></td>
+        <td>
+          Assignment 4 Part 2 out (Transformers)
+        </td>
       </tr>
 
 
@@ -1080,7 +1084,7 @@
         <td>
           <li><a href="https://www.dropbox.com/scl/fi/5j3mtw96vfqdcvg9hi3j1/Lecture-26.pdf?rlkey=r4qp7a1o2qof4iim70x30qsi6&dl=0" target="_blank">[Slides]</a></li>
         </td>
-        <td></td>
+        <td>Assignment 4 Part 2 Due (10/31)</td>
         <!--
         <td>
           Assignment 4 Part 2 (Transformers) due (Mar. 28)
