--- a/f24/index.html
+++ b/f24/index.html
@@ -977,8 +977,9 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Fri, Oct. 18</td>
+      <tr>
+        <td rowspan=10 style="vertical-align:middle;text-align:center;">Generative and Interactive Visual Intelligence<br/></td>
+        <td>Wed, Oct. 23</td>
        <td class="topic">
             Lecture 21: Computer Vision: Detection and Segmentation
           <div class="subtopic">
@@ -993,7 +994,7 @@
         <td>
             
         </td>
-      </tr> -->
+      </tr>
 
 
 <!--       <tr>
@@ -1016,7 +1017,7 @@
 
       
 
-      <tr>
+<!--       <tr>
         <td rowspan=10 style="vertical-align:middle;text-align:center;">Generative and Interactive Visual Intelligence<br/></td>
         <td>Wed, Oct. 23</td>
         <td class="topic">
@@ -1030,13 +1031,7 @@
             <li><a href="https://www.dropbox.com/scl/fi/i6bd17t4u206xjxrca4hh/Convolutional-Autoencoder.pdf?rlkey=2algqs95hxvqml8ypx1vo1ium&dl=0" target="_blank">[Reading: Convolutional AEs]</a></li>
         </td>
         <td></td>
-        <!--- 
-        <td>
-             <strike> <font color=#800000>ps2 due</font></strike> 
-            Assignment 4 Part 1 (LSTM and Attention) due (Mar. 19)
-        </td> 
-        --->
-    </tr>
+    </tr> -->
 
 
           <tr>
