--- a/f24/index.html
+++ b/f24/index.html
@@ -219,6 +219,23 @@
                     <table>
                       <tbody><tr>
 
+
+                        <td>
+                          <div class="staff">
+                            <div><img src="src/PaulLiang.jpg" class="staff"></div>
+                            <div><b><a href="https://pliang279.github.io/" class="stafflink" target="_blank" style="color: #2EA9DF;">Paul Liang</a></b></div>
+                            <div>MIT Media Lab & MIT EECS</div>
+                          </div>
+                        </td> 
+
+                        <td>
+                          <div class="staff">
+                            <div><img src="src/YifeiWang.jpg" class="staff"></div>
+                            <div><b><a href="https://yifeiwang77.com/" class="stafflink" target="_blank" style="color: #2EA9DF;">Yifei Wang</a></b></div>
+                            <div>MIT CSAIL</div>
+                          </div>
+                        </td> 
+
                         <td>
                           <div class="staff">
                             <div><img src="src/haohemit.jpg" class="staff"></div>
@@ -228,13 +245,7 @@
                         </td> 
 
 
-                        <td>
-                          <div class="staff">
-                            <div><img src="src/YifeiWang.jpg" class="staff"></div>
-                            <div><b><a href="https://yifeiwang77.com/" class="stafflink" target="_blank" style="color: #2EA9DF;">Yifei Wang</a></b></div>
-                            <div>MIT CSAIL</div>
-                          </div>
-                        </td> 
+
 
 <!--                         <td>
                           <div class="staff">
@@ -1280,22 +1291,20 @@
         <!-- <td rowspan=4 style="vertical-align:middle;text-align:center;">AI for Science<br/></td> -->
         <td>Mon, Nov. 18</td>
         <td class="topic">
-          <span style="color: #33A6B8;">CAMEL: Communicative Agents for “Mind” Exploration of Large Language Model Society</span>
-          <!-- Lecture 28: Intelligent Health Monitoring in the Home -->
-          <!-- Lecture 29: AI for Disease and Medicine -->
+          <span style="color: #33A6B8;">TBD</span>
           <div class="subtopic">
-            Guest Speaker: <a href="https://ghli.org/" target="_blank">Guohao Li</a> (University of Oxford)<br>
+            Guest Speaker: <a href="https://pliang279.github.io/" target="_blank">Paul Liang</a> (MIT Media Lab & MIT EECS)<br>
 
             <!-- <b>Zoom Link:</b> <a href="https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=93404995819" target="_blank" style="color: #2EA9DF;"><p style="font-size: 12px;">https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=93404995819</p></a> -->
           </div>
         </td>
         <td>
 
-          <p style="font-size: 12px;">Abstract: The rapid advancement of chat-based language models has led to remarkable progress in complex task-solving. However, their success heavily relies on human input to guide the conversation, which can be challenging and time-consuming. This paper explores the potential of building scalable techniques to facilitate autonomous cooperation among communicative agents, and provides insight into their "cognitive" processes. To address the challenges of achieving autonomous cooperation, we propose a novel communicative agent framework named role-playing. Our approach involves using inception prompting to guide chat agents toward task completion while maintaining consistency with human intentions. We showcase how role-playing can be used to generate conversational data for studying the behaviors and capabilities of a society of agents, providing a valuable resource for investigating conversational language models. In particular, we conduct comprehensive studies on instruction-following cooperation in multi-agent settings.</p>
+          <p style="font-size: 12px;">Abstract: XXX.</p>
 
-          <p style="font-size: 15px;">Reference Papers: <br>
+          <!-- <p style="font-size: 15px;">Reference Papers: <br>
             <a href="https://arxiv.org/pdf/2303.17760.pdf" target="_blank">[CAMEL: Communicative Agents for “Mind” Exploration of Large Language Model Society]</a>,<br> 
-            <a href="https://www.camel-ai.org/" target="_blank">[https://www.camel-ai.org/]</p>
+            <a href="https://www.camel-ai.org/" target="_blank">[https://www.camel-ai.org/]</p> -->
 
         </td>
 
@@ -1309,19 +1318,19 @@
       <tr>
         <td>Wed, Nov. 20</td>
         <td class="topic">
-          <span style="color: #33A6B8;">Segment Anything</span>
+          <span style="color: #33A6B8;">TBD</span>
         <!-- Guest Speaker: Weather Forcasting -->
         <div class="subtopic">
-            Guest Speaker: <a href="https://hanzimao.me/" target="_blank">Hanzi Mao</a> (Nvidia Deep Imagination Research) <br>
+            Guest Speaker: <a href="https://yifeiwang77.com/" target="_blank">Yifei Wang</a> (MIT CSAIL) <br>
 
             <!-- <b>Zoom Link:</b> <a href="https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=92572173772" target="_blank" style="color: #2EA9DF;"><p style="font-size: 12px;">https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=92572173772</p></a> -->
 
-            <b>Time:</b> 1:00 PM - 2:00 PM (Eastern Time), 10:00 AM - 11:00 AM (Pacific Time)
+            <!-- <b>Time:</b> 1:00 PM - 2:00 PM (Eastern Time), 10:00 AM - 11:00 AM (Pacific Time) -->
         </div>
         <td>
-          <p style="font-size: 12px;">Abstract: We introduce the Segment Anything (SA) project: a new task, model, and dataset for image segmentation. Using our efficient model in a data collection loop, we built the largest segmentation dataset to date (by far), with over 1 billion masks on 11M licensed and privacy respecting images. The model is designed and trained to be promptable, so it can transfer zero-shot to new image distributions and tasks. We evaluate its capabilities on numerous tasks and find that its zero-shot performance is impressive – often competitive with or even superior to prior fully supervised results. We are releasing the Segment Anything Model (SAM) and corresponding dataset (SA-1B) of 1B masks and 11M images at <a href="https://segment-anything.com" target="_blank">https://segment-anything.com</a> to foster research into foundation models for computer vision. </p></br>
+          <p style="font-size: 12px;">Abstract: XXX. </p></br>
 
-          <p style="font-size: 15px;">Reference Papers: <a href="https://segment-anything.com/" target="_blank">[Segment Anything (ICCV 2023 Best Honorable Mention Paper)]</a></p>
+          <!-- <p style="font-size: 15px;">Reference Papers: <a href="https://segment-anything.com/" target="_blank">[Segment Anything (ICCV 2023 Best Honorable Mention Paper)]</a></p> -->
 
         </td>
         <td>
