--- a/f24/index.html
+++ b/f24/index.html
@@ -1000,6 +1000,7 @@
           </div>
         </td>
         <td>
+          <ul class="materials">
             <li><a href="https://www.dropbox.com/scl/fi/sym5iscjzf069sch7xgdj/Lecture-21.pdf?rlkey=tpp5g6nta5ftmjvbnjjd8qfyp&dl=0" target="_blank">[Slides]</a></li>
         </td>
         <td>
@@ -1008,10 +1009,10 @@
       </tr>
 
 
-<!--       <tr>
-        <td>Mon, Oct. 21</td>
+      <tr>
+        <td>Fri, Oct. 25</td>
        <td class="topic">
-        Lecture 22: Generative Models (1)
+        Lecture 20: Generative Models (1)
           <div class="subtopic">
           Unsupervised Learning </br>
           Clustering / PCA </br>
@@ -1019,12 +1020,13 @@
           </div>
         </td>
         <td>
-            <li><a href="https://www.dropbox.com/scl/fi/jhpzm05xh8oiktbhicg4n/Lecture-22.pdf?rlkey=eqsqam3bsmh55jxh5dp7uz7uc&dl=0" target="_blank">[Slides]</a></li>
+          <ul class="materials">
+            <li><a href="https://www.dropbox.com/scl/fi/wra91g5ansniwi0z4567u/L20_Generative-Models_Autoregressive-Models.pdf?rlkey=m5w8oqapgugw8dyek2ngn7iko&st=fg5rry3d&dl=0" target="_blank">[Slides]</a></li>
         </td>
         <td>
             
         </td>
-      </tr> -->
+      </tr>
 
       
 
@@ -1045,7 +1047,7 @@
     </tr> -->
 
 
-          <tr>
+<!--           <tr>
         <td>Fri, Oct. 25</td>
         <td class="topic">
         Lecture 24: Generative Models (2) -- VAEs (continued)
@@ -1061,7 +1063,7 @@
         </td>
         <td>
         </td>
-      </tr>
+      </tr> -->
 
           <tr>
         <td>Mon, Oct. 28</td>
