--- a/f24/index.html
+++ b/f24/index.html
@@ -1012,6 +1012,23 @@
       <tr>
         <td>Fri, Oct. 25</td>
        <td class="topic">
+            Lecture 19: Computer Vision: Detection and Segmentation (2)
+          <div class="subtopic">
+          </div>
+        </td>
+        <td>
+          <ul class="materials">
+            <li><a href="https://www.dropbox.com/scl/fi/sym5iscjzf069sch7xgdj/Lecture-21.pdf?rlkey=tpp5g6nta5ftmjvbnjjd8qfyp&dl=0" target="_blank">[Slides]</a></li>
+        </td>
+        <td>
+            
+        </td>
+      </tr>
+
+
+      <tr>
+        <td>Mon, Oct. 28</td>
+       <td class="topic">
         Lecture 20: Generative Models (1)
           <div class="subtopic">
           Unsupervised Learning </br>
@@ -1030,21 +1047,23 @@
 
       
 
-<!--       <tr>
-        <td rowspan=10 style="vertical-align:middle;text-align:center;">Generative and Interactive Visual Intelligence<br/></td>
-        <td>Wed, Oct. 23</td>
+      <tr>
+        <td>Wed, Oct. 30</td>
         <td class="topic">
-          Lecture 23: Generative Models (2) -- VAEs
+          Lecture 21: Generative Models (2) -- VAEs
           <div class="subtopic">
               Convolutional AEs, Transpose Convolution</br>
               Variational Autoencoders (VAE) </br>
         </td>
         <td>
-            <li><a href="https://www.dropbox.com/scl/fi/pm219u2tlpvtgub2fk46g/Lecture-23.pdf?rlkey=dh0xfqhnsp28fitpw5djh6tj6&dl=0" target="_blank">[Slides]</a></li>
+          <ul class="materials">
+            <li><a href="https://www.dropbox.com/scl/fi/4w8hafkggcm1tznl5jrgx/L21_Generative-Models_VAEs.pdf?rlkey=jlrlgnpv683wh1s418lbds4q1&st=e2ju83po&dl=0" target="_blank">[Slides]</a></li>
             <li><a href="https://www.dropbox.com/scl/fi/i6bd17t4u206xjxrca4hh/Convolutional-Autoencoder.pdf?rlkey=2algqs95hxvqml8ypx1vo1ium&dl=0" target="_blank">[Reading: Convolutional AEs]</a></li>
         </td>
-        <td></td>
-    </tr> -->
+        <td>
+          Assignment 4 Part 2 Due (10/31)
+        </td>
+    </tr>
 
 
 <!--           <tr>
@@ -1065,7 +1084,7 @@
         </td>
       </tr> -->
 
-          <tr>
+<!--           <tr>
         <td>Mon, Oct. 28</td>
         <td class="topic">
         Lecture 25: Generative Models (3) -- GANs
@@ -1080,10 +1099,10 @@
         </td>
         <td>
         </td>
-      </tr>
+      </tr> -->
 
 
-            <tr>
+<!--       <tr>
         <td>Wed, Oct. 30</td>
         <td class="topic">
         Lecture 26: Generative Models (4) -- Diffusion Models
@@ -1096,11 +1115,7 @@
           <li><a href="https://www.dropbox.com/scl/fi/5j3mtw96vfqdcvg9hi3j1/Lecture-26.pdf?rlkey=r4qp7a1o2qof4iim70x30qsi6&dl=0" target="_blank">[Slides]</a></li>
         </td>
         <td>Assignment 4 Part 2 Due (10/31)</td>
-        <!--
-        <td>
-          Assignment 4 Part 2 (Transformers) due (Mar. 28)
-        </td> -->
-      </tr>
+      </tr> -->
 
 
       <tr>
