--- a/f24/index.html
+++ b/f24/index.html
@@ -223,15 +223,15 @@
                         <td>
                           <div class="staff">
                             <div><img src="src/PaulLiang.jpg" class="staff"></div>
-                            <div><b><a href="https://pliang279.github.io/" class="stafflink" target="_blank" style="color: #2EA9DF;">Paul Liang</a></b></div>
-                            <div>MIT Media Lab & MIT EECS</div>
+                            <div><b><a href="https://pliang279.github.io/" class="stafflink" target="_blank">Paul Liang</a></b></div>
+                            <div>MIT Media Lab & EECS</div>
                           </div>
                         </td> 
 
                         <td>
                           <div class="staff">
                             <div><img src="src/YifeiWang.jpg" class="staff"></div>
-                            <div><b><a href="https://yifeiwang77.com/" class="stafflink" target="_blank" style="color: #2EA9DF;">Yifei Wang</a></b></div>
+                            <div><b><a href="https://yifeiwang77.com/" class="stafflink" target="_blank">Yifei Wang</a></b></div>
                             <div>MIT CSAIL</div>
                           </div>
                         </td> 
@@ -239,7 +239,7 @@
                         <td>
                           <div class="staff">
                             <div><img src="src/haohemit.jpg" class="staff"></div>
-                            <div><b><a href="https://scholar.google.com/citations?user=v1sUoqwAAAAJ&hl=en" class="stafflink" target="_blank" style="color: #2EA9DF;">Hao He</a></b></div>
+                            <div><b><a href="https://scholar.google.com/citations?user=v1sUoqwAAAAJ&hl=en" class="stafflink" target="_blank">Hao He</a></b></div>
                             <div>MIT CSAIL</div>
                           </div>
                         </td> 
