--- a/f24/index.html
+++ b/f24/index.html
@@ -244,6 +244,14 @@
                           </div>
                         </td> 
 
+                        <td>
+                          <div class="staff">
+                            <div><img src="src/ZhutianYang1.jpg" class="staff"></div>
+                            <div><b><a href="https://zt-yang.com/" class="stafflink" target="_blank">Zhutian Yang</a></b></div>
+                            <div>MIT CSAIL</div>
+                          </div>
+                        </td> 
+
 
 
 
