--- a/f24/index.html
+++ b/f24/index.html
@@ -1377,7 +1377,6 @@
         <td>
           <p style="font-size: 12px;">Abstract: Respiration is a fundamental life-sustaining function intricately connected to various aspects of human health. With the aid of AI, we can uncover associations between respiration and numerous health conditions. In this lecture, we'll introduce three case studies demonstrating the use of breathing signals to predict blood oxygen saturation, sleep stages, and inflammation. We'll discuss the accuracy and practical applications of these predictive systems, as well as the core AI technologies that power them. </p></br>
         </td>
-        <!-- <td><font color=#800000>fp slide due</font> -->
         </td>
         <td></td>
       </tr>
@@ -1386,11 +1385,13 @@
         <td>Mon, Nov. 25</td>
         <td class="topic">
           <!-- AI for Healthcare -->
-          <span style="color: #33A6B8;">Learning from Synthetic data from LLMs and Diffusion Models</span>
+          <span style="color: #33A6B8;">TBD</span>
           <div class="subtopic">
-            Guest Speaker: <a href="https://scholar.google.com/citations?user=v1sUoqwAAAAJ&hl=en" target="_blank">Lijie Fan</a> (MIT CSAIL)
+            Guest Speaker: <a href="https://zt-yang.com/" target="_blank">Zhutian Yang</a> (MIT CSAIL)
           </div>
         </td>
+        <td>
+          <p style="font-size: 12px;">Abstract: XXX. </p></br>
         <td></td><td></td>
       </tr>
       <tr>
