--- a/f24/index.html
+++ b/f24/index.html
@@ -1074,8 +1074,8 @@
     </tr>
 
 
-<!--           <tr>
-        <td>Fri, Oct. 25</td>
+    <tr>
+        <td>Fri, Nov. 1</td>
         <td class="topic">
         Lecture 24: Generative Models (2) -- VAEs (continued)
           <div class="subtopic">
@@ -1085,12 +1085,13 @@
           </div>
         </td>
         <td>
+          <ul class="materials">
           <li><a href="https://www.dropbox.com/scl/fi/3abe91x130wcrv2eu1594/Lecture-24.pdf?rlkey=mwmih29kyros5skueqwsiwd2k&dl=0" target="_blank">[Slides]</a></li>
           <li><a href="https://www.youtube.com/watch?v=9_eZHt2qJs4" target="_blank">[KL Divergence]</a></li>
         </td>
         <td>
         </td>
-      </tr> -->
+      </tr>
 
 <!--           <tr>
         <td>Mon, Oct. 28</td>
@@ -1126,7 +1127,7 @@
       </tr> -->
 
 
-      <tr>
+<!--       <tr>
         <td>Fri, Nov. 1</td>
         <td class="topic">
             Lecture 26: Generative Models (4) -- Diffusion Models (continued)
@@ -1139,9 +1140,8 @@
           <li><a href="https://www.dropbox.com/scl/fi/5j3mtw96vfqdcvg9hi3j1/Lecture-26.pdf?rlkey=r4qp7a1o2qof4iim70x30qsi6&dl=0" target="_blank">[Slides]</a></li>
         </td>
         <td>
-            <!-- Project milestone due (Mar. 31) -->
         </td>
-      </tr>
+      </tr> -->
 
 
 <!--       <tr>
