--- a/f24/index.html
+++ b/f24/index.html
@@ -1368,13 +1368,23 @@
         <td>Mon, Nov. 25</td>
         <td class="topic">
           <!-- AI for Healthcare -->
-          <span style="color: #33A6B8;">TBD</span>
+          <span style="color: #33A6B8;">Generalizable Algorithms for Long-Horizon Manipulation in Complex Environments by Integrating Deep Learning and Planning-Based Approaches</span>
           <div class="subtopic">
-            Guest Speaker: <a href="https://zt-yang.com/" target="_blank">Zhutian Yang</a> (MIT CSAIL)
+            <p>Guest Speaker: <a href="https://zt-yang.com/" target="_blank">Zhutian Yang</a> (MIT CSAIL)</p>
+
+            <p style="font-size: 12px;"><b>Bio:</b> Zhutian Yang is a PhD candidate at MIT’s Computer Science and Artificial Intelligence Laboratory (CSAIL), advised by Leslie Kaelbling and Tomás Lozano-Pérez. Her research focuses on developing algorithms for long-horizon manipulation by combining deep learning with model-based planning techniques. Her work has been published in top robotics and learning conferences such as RSS, CoRL, and ICLR. She has gained valuable experience through internships at NVIDIA’s Seattle Robotics Lab and Toyota Research Institute’s Large Behaviors Team. Academic page: <a href="https://zt-yang.com/" target="_blank">https://zt-yang.com</a>.</p>
+
           </div>
         </td>
         <td>
-          <p style="font-size: 12px;">Abstract: XXX. </p></br>
+          <p style="font-size: 12px;"><b>Abstract:</b> To enable robots to perform long-horizon manipulation tasks in diverse, complex environments—such as organizing shelf spaces or making chicken soup in various office or home settings, it is beneficial to leverage the strengths of both deep learning and model-based methods. Learning-based methods offer rapid inference, local reactivity, and large-scale knowledge from the internet, but they struggle to generate long-horizon trajectories in visually diverse and geometrically complex environments. On the other hand, Task and motion planning ensures geometric feasibility, but its computational demands become impractical as the state space and task horizon grow. Additionally, encoding domain-specific knowledge and object dynamics is often cumbersome. Neither approach alone can fully address the complexity of real-world robotic tasks in a generalizable way. To overcome these challenges, we can strategically determine which components to learn from data and which to delegate to domain-agnostic planners. This talk will explore three recent projects performed in this fashion. They address tasks with intricate temporal and geometric dependencies, such as making a chicken soup, packing a box full of objects, and rearranging office chairs in a cluttered conference room. </p></br>
+
+          <p style="font-size: 12px;"><b>Reference Papers:</b> <br>
+            <a href="https://www.roboticsproceedings.org/rss19/p061.pdf" target="_blank">[Sequence-Based Plan Feasibility Prediction for Efficient Task and Motion Planning]</a>,<br> 
+            <a href="https://diffusion-ccsp.github.io/" target="_blank">[Compositional Diffusion-Based Continuous Constraint Solvers]</a>,<br>
+            <a href="https://arxiv.org/abs/2410.02193" target="_blank">[Guiding Long-Horizon Task and Motion Planning with Vision Language Models]</a>,<br>
+            <a href="https://arxiv.org/abs/2410.06911" target="_blank">[Combining Planning and Diffusion for Mobility with Unknown Dynamics]</a>.<br></p>
+
         <td></td><td></td>
       </tr>
       <tr>
