--- a/f24/index.html
+++ b/f24/index.html
@@ -1326,20 +1326,16 @@
         <td rowspan=4 style="vertical-align:middle;text-align:center;">Cutting-Edge Research<br/></td>
         <td>Mon, Nov. 18</td>
         <td class="topic">
-          <span style="color: #33A6B8;">TBD</span>
+          <span style="color: #33A6B8;">Multimodal AI</span>
           <div class="subtopic">
-            Guest Speaker: <a href="https://pliang279.github.io/" target="_blank">Paul Liang</a> (MIT Media Lab & MIT EECS)<br>
+            <p>Guest Speaker: <a href="https://pliang279.github.io/" target="_blank">Paul Liang</a> (MIT Media Lab & MIT EECS)<br></p>
 
-            <!-- <b>Zoom Link:</b> <a href="https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=93404995819" target="_blank" style="color: #2EA9DF;"><p style="font-size: 12px;">https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=93404995819</p></a> -->
+            <p style="font-size: 12px;"><b>Bio:</b> Paul Liang is an Assistant Professor at the MIT Media Lab and MIT EECS. His research advances the foundations of multisensory artificial intelligence to enhance the human experience. He is a recipient of the Siebel Scholars Award, Waibel Presidential Fellowship, Facebook PhD Fellowship, Center for ML and Health Fellowship, Rising Stars in Data Science, and 3 best paper awards. Outside of research, he received the Alan J. Perlis Graduate Student Teaching Award for developing new courses on multimodal machine learning.
           </div>
         </td>
         <td>
 
-          <p style="font-size: 12px;">Abstract: XXX.</p>
-
-          <!-- <p style="font-size: 15px;">Reference Papers: <br>
-            <a href="https://arxiv.org/pdf/2303.17760.pdf" target="_blank">[CAMEL: Communicative Agents for “Mind” Exploration of Large Language Model Society]</a>,<br> 
-            <a href="https://www.camel-ai.org/" target="_blank">[https://www.camel-ai.org/]</p> -->
+          <p style="font-size: 12px;"><b>Abstract:</b> Multimodal AI is a vibrant multi-disciplinary research field that aims to design AI with intelligent capabilities through integrating multiple communicative modalities, including linguistic, acoustic, visual, tactile, and physiological messages. Multimodality brings unique computational and theoretical challenges given the heterogeneity of data sources and the interconnections often found between modalities. By synthesizing a broad range of application domains and theoretical frameworks from both historical and recent perspectives, this lecture is designed to provide an overview of multimodal AI. Building upon a new survey paper (<a href="https://arxiv.org/abs/2209.03430" target="_blank">https://arxiv.org/abs/2209.03430</a>), we will cover three topics: (1) what is multimodal: the principles in learning from heterogeneous, connected, and interacting data, (2) why is it hard: a taxonomy of six core technical challenges faced in multimodal ML but understudied in unimodal ML, and (3) what is next: major directions for future research as identified by our taxonomy.</p>
 
         </td>
 
