--- a/f24/index.html
+++ b/f24/index.html
@@ -1349,19 +1349,12 @@
       <tr>
         <td>Wed, Nov. 20</td>
         <td class="topic">
-          <span style="color: #33A6B8;">TBD</span>
-        <!-- Guest Speaker: Weather Forcasting -->
+          <span style="color: #33A6B8;">Towards Test-time Self-supervised Learning</span>
         <div class="subtopic">
             Guest Speaker: <a href="https://yifeiwang77.com/" target="_blank">Yifei Wang</a> (MIT CSAIL) <br>
-
-            <!-- <b>Zoom Link:</b> <a href="https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=92572173772" target="_blank" style="color: #2EA9DF;"><p style="font-size: 12px;">https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=92572173772</p></a> -->
-
-            <!-- <b>Time:</b> 1:00 PM - 2:00 PM (Eastern Time), 10:00 AM - 11:00 AM (Pacific Time) -->
         </div>
         <td>
-          <p style="font-size: 12px;">Abstract: XXX. </p></br>
-
-          <!-- <p style="font-size: 15px;">Reference Papers: <a href="https://segment-anything.com/" target="_blank">[Segment Anything (ICCV 2023 Best Honorable Mention Paper)]</a></p> -->
+          <p style="font-size: 12px;"><b>Abstract:</b> Self-supervised learning (SSL) has been instrumental in unlocking the potential of massive unlabeled datasets, driving the development of foundation models across various domains. However, the benefits from pretraining are diminishing, signaling a plateau in performance gains. To introduce a new dimension for scaling SSL beyond the pretraining stage, we propose the paradigm of test-time self-supervised learning (TT-SSL), which leverages test-time computation to enhance pretrained models without requiring labeled data. We investigate two examples of TT-SSL: (1) unsupervised in-context adaptation, where models adjust to downstream tasks during test time based solely on input context, and (2) self-correction through self-reflection and iterative improvement, allowing models to refine their predictions in real-time without external feedback. This paradigm unlocks the potential of test-time computation for self-exploration and autonomous improvement of model behaviors, offering a promising new direction for advancing the scalability and capabilities of foundation models. </p></br>
 
         </td>
         <td>
