--- a/f24/index.html
+++ b/f24/index.html
@@ -1351,8 +1351,9 @@
         <td class="topic">
           <span style="color: #33A6B8;">Towards Test-time Self-supervised Learning</span>
         <div class="subtopic">
-            Guest Speaker: <a href="https://yifeiwang77.com/" target="_blank">Yifei Wang</a> (MIT CSAIL) <br>
-        </div>
+            <p>Guest Speaker: <a href="https://yifeiwang77.com/" target="_blank">Yifei Wang</a> (MIT CSAIL) <br></p>
+
+            <p style="font-size: 12px;"><b>Bio:</b> Yifei Wang is a postdoc at MIT CSAIL, advised by Prof. Stefanie Jegelka. He earned his bachelor’s and Ph.D. degrees from Peking University. His research is focused on bridging the theory and practice of self-supervised learning to advance the scalability and safety of foundation models.  His first-author works have been recognized by 3 best paper awards, including the sole Best ML Paper Award at ECML-PKDD 2021, the Silver Best Paper Award at the ICML 2021 AdvML Workshop, and the Best Paper Award at the ICML 2024 ICL Workshop. Academic page: <a href="https://yifeiwang77.com/" target="_blank">https://yifeiwang77.com</a>.
         <td>
           <p style="font-size: 12px;"><b>Abstract:</b> Self-supervised learning (SSL) has been instrumental in unlocking the potential of massive unlabeled datasets, driving the development of foundation models across various domains. However, the benefits from pretraining are diminishing, signaling a plateau in performance gains. To introduce a new dimension for scaling SSL beyond the pretraining stage, we propose the paradigm of test-time self-supervised learning (TT-SSL), which leverages test-time computation to enhance pretrained models without requiring labeled data. We investigate two examples of TT-SSL: (1) unsupervised in-context adaptation, where models adjust to downstream tasks during test time based solely on input context, and (2) self-correction through self-reflection and iterative improvement, allowing models to refine their predictions in real-time without external feedback. This paradigm unlocks the potential of test-time computation for self-exploration and autonomous improvement of model behaviors, offering a promising new direction for advancing the scalability and capabilities of foundation models. </p></br>
 
