--- a/f24/index.html
+++ b/f24/index.html
@@ -1365,17 +1365,20 @@
       <tr>
         <td>Fri, Nov. 22</td>
         <td class="topic">
-          <span style="color: #33A6B8;">Respiration Intelligence: Know Your Health from Your Breathing with an AI Assistant</span>
+          <span style="color: #33A6B8;">Respiratory Intelligence: What Can AI Learn About Your Health from Your Breathing</span>
           <!-- Presentation I -->
           <div class="subtopic">
-            Guest Speaker: <a href="https://scholar.google.com/citations?user=v1sUoqwAAAAJ&hl=en" target="_blank">Hao He</a> (MIT CSAIL) <br>
+            <p>Guest Speaker: <a href="https://scholar.google.com/citations?user=v1sUoqwAAAAJ&hl=en" target="_blank">Hao He</a> (MIT CSAIL) <br></p>
 
             <!-- <b>Zoom Link:</b> <a href="https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=98130504935" target="_blank" style="color: #2EA9DF;"><p style="font-size: 12px;">https://mit.zoom.us/j/9470404282?pwd=Wlp4cUFXWWtnaUxXbUpmbmZuS0xndz09&omn=98130504935</p></a> -->
+
+
+            <p style="font-size: 12px;"><b>Bio:</b> Hao is a final-year PhD student at MIT, where he is supervised by Prof. Dina Katabi. His research focuses on leveraging machine learning for healthcare applications, with a particular emphasis on sleep science. His contributions have been recognized through publications in top AI conferences and high-impact medical journals. Hao is the recipient of the Takeda Fellowship, awarded to outstanding researchers in AI and health, and Barbara J. Weedon Fellowship, given to researchers making advancements in neurodegenerative diseases.
 
           </div>
         </td>
         <td>
-          <p style="font-size: 12px;">Abstract: Respiration is a fundamental life-sustaining function intricately connected to various aspects of human health. With the aid of AI, we can uncover associations between respiration and numerous health conditions. In this lecture, we'll introduce three case studies demonstrating the use of breathing signals to predict blood oxygen saturation, sleep stages, and inflammation. We'll discuss the accuracy and practical applications of these predictive systems, as well as the core AI technologies that power them. </p></br>
+          <p style="font-size: 12px;"><b>Abstract:</b> Respiration is one of the most fundamental functions of the human body, closely tied to a person’s overall health. In this talk, I will explore how advancements in AI technology allow us to extract valuable health insights from nocturnal breathing patterns. I will address various health aspects, including sleep quality, physiological conditions such as oxygen desaturation and inflammation, and even neurodegenerative diseases like Alzheimer’s. </p></br>
         </td>
         </td>
         <td></td>
