--- a/f24/index.html
+++ b/f24/index.html
@@ -1349,7 +1349,7 @@
       <tr>
         <td>Wed, Nov. 20</td>
         <td class="topic">
-          <span style="color: #33A6B8;">Towards Test-time Self-supervised Learning</span>
+          <span style="color: #33A6B8;">Towards Test-time Self-supervised Learning (<a href="https://yifeiwang77.com/assets/pdf/TT-SSL-talk-Nov2024.pdf" target="_blank">Slides</a>)</span>
         <div class="subtopic">
             <p>Guest Speaker: <a href="https://yifeiwang77.com/" target="_blank">Yifei Wang</a> (MIT CSAIL) <br></p>
 
