fix lecture day

--- a/f25/index.html
+++ b/f25/index.html
@@ -111,7 +111,7 @@
 
                         <!-- <li><b>Lecture format</b>: 80% PPT, 10% think-pair-share, 10% live coding.</li> -->
                         <li><b>Lecture:</b><br>
-                          Lectures will be Monday, Wednesday, and Friday at 245 Beacon St. Room 125A, from 3:00pm to 4:15pm. 
+                          Lectures will be Tuesday and Thursday at 245 Beacon St. Room 125A, from 3:00pm to 4:15pm. 
                         <li><b>Textbooks and Materials:</b> <br>
                           There is no required textbook for the course. However, the following books (available for free online) can be useful as references on relevant topics:
                                 <ul style="margin-left: 30px;margin-top: 0px">
