adam/xander f25 OH

--- a/f25/index.html
+++ b/f25/index.html
@@ -944,8 +944,8 @@
                          <th style="text-align:center">Office hours</th>
                      </tr></thead>
                      <tr class="alternate"><td>Yuan  </td><td>Tu/Th 4:30–5:30PM @ 245 Beacon Rm. 528E</td></tr> 
-                     <tr class="alternate"><td>Adam </td><td>??? @ CS Lab</td></tr>
-                     <tr class="alternate"><td>Xander </td><td>??? @ CS Lab</td></tr>
+                     <tr class="alternate"><td>Adam </td><td> Mon 3:00-5:00PM & Tue 10:00AM-12:00PM @ CS Lab</td></tr>
+                     <tr class="alternate"><td>Xander</td><td>Wed 4:30-6:30PM & Fri 12:00-2:00PM @ CS Lab</td></tr>
                    </tbody></table>
                     <div align="left" style="padding-left: 4%; margin-top: -30px">
                     <ul>
