--- a/f25/index.html
+++ b/f25/index.html
@@ -130,18 +130,11 @@
                                     <li>60%: Final Project (Proposal, Presentation, and Report)</li>
                                 </ul>
 
-                        
-             <!--              No quizzes/exams. <br>
-                          10%: Attendance (Including Asking Questions)
-                          60%: Homework Assigenments (10%*6)
-                          30%: Final Project (Proposal, Presentation, and Report) -->
-
+                      
                           You will complete six programming assignments over the course of the semester. All homework assignments will be in Python, and will use <a href="https://pytorch.org/" target="_blank"><i>PyTorch</i></a> on Google Colab. <br>
 
-                          Instead of a final exam, at the end of the semester you will complete a project working in groups of at most 3 students. 
-                          <!-- The homework assignments walk you through implementing things with extensive starter code; in contrast the project will not provide any starter code whatsoever, leaving you to implement an entire deep learning pipeline from scratch. -->
+                          Instead of a final exam, at the end of the semester you will complete a project working in groups of at most 4 students. 
 
-                          <!-- 10 labs (35%) + 5 psets (35%) + 1 final project (30%). <a href="https://drive.google.com/drive/folders/1LQR9ZyZ7EtOMsvpB1bPRARBVgwQW3OWW">[folder of assignments]</a> </li> -->
                     </ul>
                     </div>
                     </p>         
@@ -427,12 +420,21 @@
 
     <tr>
     <td>Tue, Aug. 26</td>
-    <td class="topic">
-    <div class="subtopic">
-    </div>
+    <td class="topic">Lecture 1: Introduction
+      <div class="subtopic">
+        Course overview, <br/>
+        Course logistics
+      </div>
     </td>
     <td>
     <ul class="materials">
+      <li><a href="https://www.dropbox.com/scl/fi/j1j2carqxkiqrskqvxjg5/L1_Introduction.pdf?rlkey=fpd4zl2r8w2tsj821gy0rtnqf&st=lckkx1tk&dl=0" target="_blank">[Slides]</a> </li>
+      <li><a href="https://cs231n.github.io/python-numpy-tutorial/" target="_blank">[Python Tutorial]</a>, 
+      <a href="https://cs231n.github.io/setup-instructions/#working-remotely-on-google-colaboratory">[Colab]</a>
+      <br/> </li>
+      <li><a href="https://www.deeplearningbook.org/contents/intro.html" target="_blank">[DL Sec 1.2] </a>,
+      <a href="https://www.deeplearningbook.org/contents/mlp.html" target="_blank">[DL Sec 6.6] </a>
+      <br/> </li>
 
     </ul>
     </td>
